--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -60,6 +60,7 @@
 \newcommand{\sit}[1]{\sum_{#1}} % sigma-type
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
+\newcommand{\re}{\mathcal{R}}%realization
 \newcommand{\refl}{\ensuremath{\mathsf{refl}}}
 \newcommand{\ap}{\ensuremath{\mathsf{ap}}}
 \newcommand{\pr}{\ensuremath{\mathrm{pr}}}
@@ -211,6 +212,7 @@
 \newcommand{\CartSp}{\mathsf{CartSp}}
 \newcommand{\infg}{\infty\text{-groupoid}}
 \newcommand{\hquot}{/\!\!/}
+\renewcommand{\P}{\mathscr{P}}
 \newcommand{\C}{\mathscr{C}}
 \newcommand{\E}{\mathscr{E}}
 \newcommand{\Gg}{\mathscr{G}}
