new work in 2025 to guide our next meeting

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -40,9 +40,9 @@ Higher inductive types can capture some concepts of differential geometry in two
 
 \input{discrete_gauge_theory_combman}
 
-\input{discrete_gauge_theory_connections}
-
-\input{discrete_gauge_theory_ap_is_d}
+% \input{discrete_gauge_theory_connections}
+% 
+% \input{discrete_gauge_theory_ap_is_d}
 
 \bibliography{connections}
 \end{document}
